--- a/tokens/config.json
+++ b/tokens/config.json
@@ -26,7 +26,7 @@
         "type": "fontFamilies"
       },
       "symbol": {
-        "value": "Magic UI Symbols",
+        "value": "Symbols",
         "type": "fontFamilies"
       }
     },
