add active and hover to grey

--- a/tokens/config.json
+++ b/tokens/config.json
@@ -456,6 +456,14 @@
           "default": {
             "value": "0.8",
             "type": "other"
+          },
+          "hover": {
+            "value": "0.8",
+            "type": "other"
+          },
+          "active": {
+            "value": "0.8",
+            "type": "other"
           }
         }
       },
