--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1992,7 +1992,7 @@
                 "x": "0",
                 "y": "0",
                 "blur": "0",
-                "spread": "{app.dimension.control.border.sm}",
+                "spread": "1px",
                 "color": "{app.color.component.focus.border.default}",
                 "type": "dropShadow"
               },
@@ -2013,7 +2013,7 @@
                 "x": "0",
                 "y": "0",
                 "blur": "0",
-                "spread": "{app.dimension.control.border.md}",
+                "spread": "1px",
                 "color": "{app.color.component.focus.border.default}",
                 "type": "dropShadow"
               },
@@ -2034,7 +2034,7 @@
                 "x": "0",
                 "y": "0",
                 "blur": "0",
-                "spread": "{app.dimension.control.border.lg}",
+                "spread": "2px",
                 "color": "{app.color.component.focus.border.default}",
                 "type": "dropShadow"
               },
