fix font families

--- a/tokens/config.json
+++ b/tokens/config.json
@@ -2,27 +2,27 @@
   "config": {
     "fontFamily": {
       "primary": {
-        "value": "Wand UI Pro",
+        "value": "Mirage",
         "type": "fontFamilies"
       },
       "secondary": {
-        "value": "Margiela Mono",
+        "value": "Index",
         "type": "fontFamilies"
       },
       "tertiary": {
-        "value": "Wand UI Pro",
+        "value": "Mirage",
         "type": "fontFamilies"
       },
       "ui": {
-        "value": "Wand UI Pro",
+        "value": "Mirage",
         "type": "fontFamilies"
       },
       "uiAlt": {
-        "value": "Margiela Mono",
+        "value": "Index",
         "type": "fontFamilies"
       },
       "code": {
-        "value": "Margiela Mono",
+        "value": "Index",
         "type": "fontFamilies"
       },
       "symbol": {
