fix semibold issue

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1051,7 +1051,7 @@
           "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.uiAlt}",
-              "fontWeight": "SemiBold",
+              "fontWeight": "{config.fontWeight.semibold}",
               "lineHeight": "140%",
               "fontSize": "{config.fontSize.control.text}"
             },
@@ -1071,7 +1071,7 @@
           "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.uiAlt}",
-              "fontWeight": "SemiBold",
+              "fontWeight": "{config.fontWeight.semibold}",
               "lineHeight": "120%",
               "fontSize": "{config.fontSize.control.text}"
             },
@@ -1193,9 +1193,9 @@
           "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.uiAlt}",
-              "fontWeight": "SemiBold",
               "lineHeight": "100%",
-              "fontSize": "{config.fontSize.label.text}"
+              "fontSize": "{config.fontSize.label.text}",
+              "fontWeight": "{config.fontWeight.semibold}"
             },
             "type": "typography"
           }
@@ -1213,9 +1213,9 @@
           "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.uiAlt}",
-              "fontWeight": "SemiBold",
               "lineHeight": "100%",
-              "fontSize": "{config.fontSize.label.text}"
+              "fontSize": "{config.fontSize.label.text}",
+              "fontWeight": "{config.fontWeight.semibold}"
             },
             "type": "typography"
           }
