fix line-height tokens

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1085,7 +1085,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{config.fontWeight.medium}",
-              "lineHeight": "{app.lineHeight.display.1}",
+              "lineHeight": "{app.lineHeight.display.sm}",
               "fontSize": "{app.fontSize.display.text.1}"
             },
             "type": "typography"
@@ -1094,7 +1094,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{config.fontWeight.medium}",
-              "lineHeight": "{app.lineHeight.display.1}",
+              "lineHeight": "{app.lineHeight.display.sm}",
               "fontSize": "{app.fontSize.display.text.2}"
             },
             "type": "typography"
@@ -1103,7 +1103,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{config.fontWeight.medium}",
-              "lineHeight": "{app.lineHeight.display.1}",
+              "lineHeight": "{app.lineHeight.display.sm}",
               "fontSize": "{app.fontSize.display.text.3}"
             },
             "type": "typography"
@@ -1114,7 +1114,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{config.fontWeight.medium}",
-              "lineHeight": "{app.lineHeight.display.1}",
+              "lineHeight": "{app.lineHeight.display.sm}",
               "fontSize": "{app.fontSize.display.symbol.1}"
             },
             "type": "typography"
@@ -1123,7 +1123,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{config.fontWeight.medium}",
-              "lineHeight": "{app.lineHeight.display.1}",
+              "lineHeight": "{app.lineHeight.display.sm}",
               "fontSize": "{app.fontSize.display.symbol.2}"
             },
             "type": "typography"
@@ -1132,7 +1132,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{config.fontWeight.medium}",
-              "lineHeight": "{app.lineHeight.display.1}",
+              "lineHeight": "{app.lineHeight.display.sm}",
               "fontSize": "{app.fontSize.display.symbol.3}"
             },
             "type": "typography"
@@ -1227,7 +1227,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{app.fontWeight.title.text.default}",
-              "lineHeight": "{app.lineHeight.title.1}",
+              "lineHeight": "{app.lineHeight.title.sm}",
               "fontSize": "{app.fontSize.title.text.1}"
             },
             "type": "typography"
@@ -1236,7 +1236,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{app.fontWeight.title.text.default}",
-              "lineHeight": "{app.lineHeight.title.2}",
+              "lineHeight": "{app.lineHeight.title.md}",
               "fontSize": "{app.fontSize.title.text.2}"
             },
             "type": "typography"
@@ -1245,7 +1245,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{app.fontWeight.title.text.default}",
-              "lineHeight": "{app.lineHeight.title.3}",
+              "lineHeight": "{app.lineHeight.title.lg}",
               "fontSize": "{app.fontSize.title.text.3}"
             },
             "type": "typography"
@@ -1256,7 +1256,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{app.fontWeight.title.symbol.default}",
-              "lineHeight": "{app.lineHeight.title.1}",
+              "lineHeight": "{app.lineHeight.title.sm}",
               "fontSize": "{app.fontSize.title.symbol.1}"
             },
             "type": "typography"
@@ -1265,7 +1265,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{app.fontWeight.title.symbol.default}",
-              "lineHeight": "{app.lineHeight.title.2}",
+              "lineHeight": "{app.lineHeight.title.md}",
               "fontSize": "{app.fontSize.title.symbol.2}"
             },
             "type": "typography"
@@ -1274,7 +1274,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{app.fontWeight.title.symbol.default}",
-              "lineHeight": "{app.lineHeight.title.3}",
+              "lineHeight": "{app.lineHeight.title.lg}",
               "fontSize": "{app.fontSize.title.symbol.3}"
             },
             "type": "typography"
@@ -1479,7 +1479,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{app.fontWeight.callout.text.default}",
-              "lineHeight": "{app.lineHeight.callout.1}",
+              "lineHeight": "{app.lineHeight.callout.sm}",
               "fontSize": "{app.fontSize.callout.text.1}"
             },
             "type": "typography"
@@ -1488,7 +1488,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{app.fontWeight.callout.text.default}",
-              "lineHeight": "{app.lineHeight.callout.2}",
+              "lineHeight": "{app.lineHeight.callout.md}",
               "fontSize": "{app.fontSize.callout.text.2}"
             },
             "type": "typography"
@@ -1497,7 +1497,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{app.fontWeight.callout.text.default}",
-              "lineHeight": "{app.lineHeight.callout.3}",
+              "lineHeight": "{app.lineHeight.callout.lg}",
               "fontSize": "{app.fontSize.callout.text.3}"
             },
             "type": "typography"
@@ -1508,7 +1508,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{app.fontWeight.callout.symbol.default}",
-              "lineHeight": "{app.lineHeight.callout.1}",
+              "lineHeight": "{app.lineHeight.callout.sm}",
               "fontSize": "{app.fontSize.callout.symbol.1}"
             },
             "type": "typography"
@@ -1517,7 +1517,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{app.fontWeight.callout.symbol.default}",
-              "lineHeight": "{app.lineHeight.callout.2}",
+              "lineHeight": "{app.lineHeight.callout.md}",
               "fontSize": "{app.fontSize.callout.symbol.2}"
             },
             "type": "typography"
@@ -1526,7 +1526,7 @@
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{app.fontWeight.callout.symbol.default}",
-              "lineHeight": "{app.lineHeight.callout.3}",
+              "lineHeight": "{app.lineHeight.callout.lg}",
               "fontSize": "{app.fontSize.callout.symbol.3}"
             },
             "type": "typography"
@@ -2143,43 +2143,43 @@
     },
     "lineHeight": {
       "title": {
-        "1": {
+        "sm": {
           "value": "130%",
           "type": "lineHeights"
         },
-        "2": {
+        "md": {
           "value": "120%",
           "type": "lineHeights"
         },
-        "3": {
+        "lg": {
           "value": "110%",
           "type": "lineHeights"
         }
       },
       "display": {
-        "1": {
+        "sm": {
           "value": "95%",
           "type": "lineHeights"
         },
-        "2": {
+        "md": {
           "value": "90%",
           "type": "lineHeights"
         },
-        "3": {
+        "lg": {
           "value": "85%",
           "type": "lineHeights"
         }
       },
       "callout": {
-        "1": {
+        "sm": {
           "value": "140%",
           "type": "lineHeights"
         },
-        "2": {
+        "md": {
           "value": "140%",
           "type": "lineHeights"
         },
-        "3": {
+        "lg": {
           "value": "140%",
           "type": "lineHeights"
         }
