update text tokens

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1081,59 +1081,59 @@
       },
       "display": {
         "text": {
-          "1": {
+          "sm": {
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{config.fontWeight.medium}",
               "lineHeight": "{app.lineHeight.display.sm}",
-              "fontSize": "{app.fontSize.display.text.1}"
+              "fontSize": "{app.fontSize.display.text.sm}"
             },
             "type": "typography"
           },
-          "2": {
+          "md": {
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{config.fontWeight.medium}",
               "lineHeight": "{app.lineHeight.display.sm}",
-              "fontSize": "{app.fontSize.display.text.2}"
+              "fontSize": "{app.fontSize.display.text.md}"
             },
             "type": "typography"
           },
-          "3": {
+          "lg": {
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{config.fontWeight.medium}",
               "lineHeight": "{app.lineHeight.display.sm}",
-              "fontSize": "{app.fontSize.display.text.3}"
+              "fontSize": "{app.fontSize.display.text.lg}"
             },
             "type": "typography"
           }
         },
         "symbol": {
-          "1": {
+          "sm": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{config.fontWeight.medium}",
               "lineHeight": "{app.lineHeight.display.sm}",
-              "fontSize": "{app.fontSize.display.symbol.1}"
+              "fontSize": "{app.fontSize.display.symbol.sm}"
             },
             "type": "typography"
           },
-          "2": {
+          "md": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{config.fontWeight.medium}",
               "lineHeight": "{app.lineHeight.display.sm}",
-              "fontSize": "{app.fontSize.display.symbol.2}"
+              "fontSize": "{app.fontSize.display.symbol.md}"
             },
             "type": "typography"
           },
-          "3": {
+          "lg": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{config.fontWeight.medium}",
               "lineHeight": "{app.lineHeight.display.sm}",
-              "fontSize": "{app.fontSize.display.symbol.3}"
+              "fontSize": "{app.fontSize.display.symbol.lg}"
             },
             "type": "typography"
           }
@@ -1223,59 +1223,59 @@
       },
       "title": {
         "text": {
-          "1": {
+          "sm": {
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{app.fontWeight.title.text.default}",
               "lineHeight": "{app.lineHeight.title.sm}",
-              "fontSize": "{app.fontSize.title.text.1}"
+              "fontSize": "{app.fontSize.title.text.sm}"
             },
             "type": "typography"
           },
-          "2": {
+          "md": {
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{app.fontWeight.title.text.default}",
               "lineHeight": "{app.lineHeight.title.md}",
-              "fontSize": "{app.fontSize.title.text.2}"
+              "fontSize": "{app.fontSize.title.text.md}"
             },
             "type": "typography"
           },
-          "3": {
+          "lg": {
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{app.fontWeight.title.text.default}",
               "lineHeight": "{app.lineHeight.title.lg}",
-              "fontSize": "{app.fontSize.title.text.3}"
+              "fontSize": "{app.fontSize.title.text.lg}"
             },
             "type": "typography"
           }
         },
         "symbol": {
-          "1": {
+          "sm": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{app.fontWeight.title.symbol.default}",
               "lineHeight": "{app.lineHeight.title.sm}",
-              "fontSize": "{app.fontSize.title.symbol.1}"
+              "fontSize": "{app.fontSize.title.symbol.sm}"
             },
             "type": "typography"
           },
-          "2": {
+          "md": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{app.fontWeight.title.symbol.default}",
               "lineHeight": "{app.lineHeight.title.md}",
-              "fontSize": "{app.fontSize.title.symbol.2}"
+              "fontSize": "{app.fontSize.title.symbol.md}"
             },
             "type": "typography"
           },
-          "3": {
+          "lg": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{app.fontWeight.title.symbol.default}",
               "lineHeight": "{app.lineHeight.title.lg}",
-              "fontSize": "{app.fontSize.title.symbol.3}"
+              "fontSize": "{app.fontSize.title.symbol.lg}"
             },
             "type": "typography"
           }
@@ -1475,59 +1475,59 @@
       },
       "callout": {
         "text": {
-          "1": {
+          "sm": {
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{app.fontWeight.callout.text.default}",
               "lineHeight": "{app.lineHeight.callout.sm}",
-              "fontSize": "{app.fontSize.callout.text.1}"
+              "fontSize": "{app.fontSize.callout.text.sm}"
             },
             "type": "typography"
           },
-          "2": {
+          "md": {
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{app.fontWeight.callout.text.default}",
               "lineHeight": "{app.lineHeight.callout.md}",
-              "fontSize": "{app.fontSize.callout.text.2}"
+              "fontSize": "{app.fontSize.callout.text.md}"
             },
             "type": "typography"
           },
-          "3": {
+          "lg": {
             "value": {
               "fontFamily": "{config.fontFamily.primary}",
               "fontWeight": "{app.fontWeight.callout.text.default}",
               "lineHeight": "{app.lineHeight.callout.lg}",
-              "fontSize": "{app.fontSize.callout.text.3}"
+              "fontSize": "{app.fontSize.callout.text.lg}"
             },
             "type": "typography"
           }
         },
         "symbol": {
-          "1": {
+          "sm": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{app.fontWeight.callout.symbol.default}",
               "lineHeight": "{app.lineHeight.callout.sm}",
-              "fontSize": "{app.fontSize.callout.symbol.1}"
+              "fontSize": "{app.fontSize.callout.symbol.sm}"
             },
             "type": "typography"
           },
-          "2": {
+          "md": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{app.fontWeight.callout.symbol.default}",
               "lineHeight": "{app.lineHeight.callout.md}",
-              "fontSize": "{app.fontSize.callout.symbol.2}"
+              "fontSize": "{app.fontSize.callout.symbol.md}"
             },
             "type": "typography"
           },
-          "3": {
+          "lg": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{app.fontWeight.callout.symbol.default}",
               "lineHeight": "{app.lineHeight.callout.lg}",
-              "fontSize": "{app.fontSize.callout.symbol.3}"
+              "fontSize": "{app.fontSize.callout.symbol.lg}"
             },
             "type": "typography"
           }
@@ -1629,60 +1629,60 @@
       },
       "display": {
         "text": {
-          "1": {
+          "sm": {
             "value": "{config.fontSize.display.text}",
             "type": "fontSizes"
           },
-          "2": {
-            "value": "{app.fontSize.display.text.1} + 2rem",
+          "md": {
+            "value": "{app.fontSize.display.text.sm} + 2rem",
             "type": "fontSizes"
           },
-          "3": {
-            "value": "{app.fontSize.display.text.2} + 2rem",
+          "lg": {
+            "value": "{app.fontSize.display.text.md} + 2rem",
             "type": "fontSizes"
           }
         },
         "symbol": {
-          "1": {
+          "sm": {
             "value": "{config.fontSize.display.symbol}",
             "type": "fontSizes"
           },
-          "2": {
-            "value": "{app.fontSize.display.symbol.1} + 2rem",
+          "md": {
+            "value": "{app.fontSize.display.symbol.sm} + 2rem",
             "type": "fontSizes"
           },
-          "3": {
-            "value": "{app.fontSize.display.symbol.2} + 2rem",
+          "lg": {
+            "value": "{app.fontSize.display.symbol.md} + 2rem",
             "type": "fontSizes"
           }
         }
       },
       "title": {
         "text": {
-          "1": {
+          "sm": {
             "value": "{config.fontSize.title.text}",
             "type": "fontSizes"
           },
-          "2": {
-            "value": "{app.fontSize.title.text.1} + 1rem",
+          "md": {
+            "value": "{app.fontSize.title.text.sm} + 1rem",
             "type": "fontSizes"
           },
-          "3": {
-            "value": "{app.fontSize.title.text.2} + 1rem",
+          "lg": {
+            "value": "{app.fontSize.title.text.md} + 1rem",
             "type": "fontSizes"
           }
         },
         "symbol": {
-          "1": {
+          "sm": {
             "value": "{config.fontSize.title.symbol}",
             "type": "fontSizes"
           },
-          "2": {
-            "value": "{app.fontSize.title.symbol.1} + 1rem",
+          "md": {
+            "value": "{app.fontSize.title.symbol.sm} + 1rem",
             "type": "fontSizes"
           },
-          "3": {
-            "value": "{app.fontSize.title.symbol.2} + 1rem",
+          "lg": {
+            "value": "{app.fontSize.title.symbol.md} + 1rem",
             "type": "fontSizes"
           }
         }
@@ -1707,30 +1707,30 @@
       },
       "callout": {
         "text": {
-          "1": {
+          "sm": {
             "value": "{config.fontSize.callout.text}",
             "type": "fontSizes"
           },
-          "2": {
-            "value": "{app.fontSize.callout.text.1} + 0.125rem",
+          "md": {
+            "value": "{app.fontSize.callout.text.sm} + 0.125rem",
             "type": "fontSizes"
           },
-          "3": {
-            "value": "{app.fontSize.callout.text.2} + 0.125rem",
+          "lg": {
+            "value": "{app.fontSize.callout.text.md} + 0.125rem",
             "type": "fontSizes"
           }
         },
         "symbol": {
-          "1": {
+          "sm": {
             "value": "{config.fontSize.callout.symbol}",
             "type": "fontSizes"
           },
-          "2": {
-            "value": "{app.fontSize.callout.symbol.1} + 0.125rem",
+          "md": {
+            "value": "{app.fontSize.callout.symbol.sm} + 0.125rem",
             "type": "fontSizes"
           },
-          "3": {
-            "value": "{app.fontSize.callout.symbol.2} + 0.125rem",
+          "lg": {
+            "value": "{app.fontSize.callout.symbol.md} + 0.125rem",
             "type": "fontSizes"
           }
         }
@@ -1886,15 +1886,15 @@
         }
       },
       "callout": {
-        "1": {
+        "sm": {
           "value": "0%",
           "type": "letterSpacing"
         },
-        "2": {
+        "md": {
           "value": "0%",
           "type": "letterSpacing"
         },
-        "3": {
+        "lg": {
           "value": "0%",
           "type": "letterSpacing"
         },
@@ -1924,15 +1924,15 @@
         }
       },
       "title": {
-        "1": {
+        "sm": {
           "value": "-0.5%",
           "type": "letterSpacing"
         },
-        "2": {
+        "md": {
           "value": "-1%",
           "type": "letterSpacing"
         },
-        "3": {
+        "lg": {
           "value": "-1.5%",
           "type": "letterSpacing"
         },
