update surface dimension

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2,46 +2,24 @@
   "app": {
     "dimension": {
       "surface": {
-        "padding": {
-          "sm": {
-            "value": "{app.dimension.control.padding.md} - 0.25rem",
-            "type": "dimension"
-          },
-          "md": {
-            "value": "{config.dimension.control.padding}",
-            "type": "dimension"
-          },
-          "lg": {
-            "value": "{app.dimension.control.padding.md} + 0.25rem",
-            "type": "dimension"
-          }
-        },
-        "gap": {
-          "sm": {
-            "value": "{app.dimension.control.gap.md} - 0.125rem",
-            "type": "dimension"
-          },
-          "md": {
-            "value": "{config.dimension.control.gap}",
-            "type": "dimension"
-          },
-          "lg": {
-            "value": "{app.dimension.control.gap.md} + 0.125rem",
-            "type": "dimension"
-          }
-        },
         "radius": {
-          "sm": {
-            "value": "{app.dimension.control.radius.md} - 0.25rem",
-            "type": "dimension"
-          },
-          "md": {
-            "value": "{config.dimension.control.radius}",
-            "type": "dimension"
-          },
-          "lg": {
-            "value": "{app.dimension.control.radius.md} + 1rem",
-            "type": "dimension"
+          "elevation": {
+            "low": {
+              "value": "0rem",
+              "type": "dimension"
+            },
+            "base": {
+              "value": "{config.dimension.control.radius}",
+              "type": "dimension"
+            },
+            "high": {
+              "value": "{app.dimension.surface.radius.elevation.base} + 0.5rem",
+              "type": "dimension"
+            },
+            "higher": {
+              "value": "{app.dimension.surface.radius.elevation.high} + 0.5rem",
+              "type": "dimension"
+            }
           }
         },
         "border": {
