--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1215,27 +1215,27 @@
             "sm": {
               "value": {
                 "fontFamily": "{config.fontFamily.primary}",
-                "fontWeight": "{app.fontWeight.title.text.default}",
-                "lineHeight": "{app.lineHeight.title.sm}",
-                "fontSize": "{app.fontSize.title.text.sm}"
+                "fontWeight": "{config.fontWeight.semibold}",
+                "lineHeight": "130%",
+                "fontSize": "{config.fontSize.title.text}"
               },
               "type": "typography"
             },
             "md": {
               "value": {
                 "fontFamily": "{config.fontFamily.primary}",
-                "fontWeight": "{app.fontWeight.title.text.default}",
-                "lineHeight": "{app.lineHeight.title.md}",
-                "fontSize": "{app.fontSize.title.text.md}"
+                "fontWeight": "{config.fontWeight.semibold}",
+                "lineHeight": "120%",
+                "fontSize": "{config.fontSize.title.text} * 1.5"
               },
               "type": "typography"
             },
             "lg": {
               "value": {
                 "fontFamily": "{config.fontFamily.primary}",
-                "fontWeight": "{app.fontWeight.title.text.default}",
-                "lineHeight": "{app.lineHeight.title.lg}",
-                "fontSize": "{app.fontSize.title.text.lg}"
+                "fontWeight": "{config.fontWeight.semibold}",
+                "lineHeight": "110%",
+                "fontSize": "{config.fontSize.title.text} * 2"
               },
               "type": "typography"
             }
@@ -1244,27 +1244,27 @@
             "sm": {
               "value": {
                 "fontFamily": "{config.fontFamily.symbol}",
-                "fontWeight": "{app.fontWeight.title.symbol.default}",
-                "lineHeight": "{app.lineHeight.title.sm}",
-                "fontSize": "{app.fontSize.title.symbol.sm}"
+                "fontWeight": "{config.fontWeight.semibold}",
+                "lineHeight": "130%",
+                "fontSize": "{config.fontSize.title.symbol}"
               },
               "type": "typography"
             },
             "md": {
               "value": {
                 "fontFamily": "{config.fontFamily.symbol}",
-                "fontWeight": "{app.fontWeight.title.symbol.default}",
-                "lineHeight": "{app.lineHeight.title.md}",
-                "fontSize": "{app.fontSize.title.symbol.md}"
+                "fontWeight": "{config.fontWeight.semibold}",
+                "lineHeight": "120%",
+                "fontSize": "{config.fontSize.title.symbol} * 1.5"
               },
               "type": "typography"
             },
             "lg": {
               "value": {
                 "fontFamily": "{config.fontFamily.symbol}",
-                "fontWeight": "{app.fontWeight.title.symbol.default}",
-                "lineHeight": "{app.lineHeight.title.lg}",
-                "fontSize": "{app.fontSize.title.symbol.lg}"
+                "fontWeight": "{config.fontWeight.semibold}",
+                "lineHeight": "110%",
+                "fontSize": "{config.fontSize.title.symbol} * 2"
               },
               "type": "typography"
             }
